WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94776
Crash when trying to render empty cues
https://bugs.webkit.org/show_bug.cgi?id=94776
Summary
Crash when trying to render empty cues
Victor Carbune
Reported
2012-08-22 22:15:53 PDT
In TextTrackCue::getCueAsHTML() there should be an extra check for returning a null document fragment and the method TextTrackCue::updateDisplayTree() should be called doing anything only for rendered tracks.
Attachments
Patch
(4.76 KB, patch)
2012-08-22 22:30 PDT
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.21 KB, patch)
2012-08-27 10:06 PDT
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.80 KB, patch)
2012-08-27 10:15 PDT
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Victor Carbune
Comment 1
2012-08-22 22:30:40 PDT
Created
attachment 160085
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-23 09:51:49 PDT
Comment on
attachment 160085
[details]
Patch Rejecting
attachment 160085
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ommit-queue/Source/WebKit/chromium/third_party/snappy/src --revision 63 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 48>At revision 63. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/13562775
Victor Carbune
Comment 3
2012-08-27 10:06:25 PDT
Created
attachment 160740
[details]
Patch for landing
Victor Carbune
Comment 4
2012-08-27 10:15:06 PDT
Created
attachment 160742
[details]
Patch for landing
WebKit Review Bot
Comment 5
2012-08-27 11:05:23 PDT
Comment on
attachment 160742
[details]
Patch for landing Clearing flags on attachment: 160742 Committed
r126776
: <
http://trac.webkit.org/changeset/126776
>
WebKit Review Bot
Comment 6
2012-08-27 11:05:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug