Crash when trying to render empty cues https://bugs.webkit.org/show_bug.cgi?id=94776

Reviewed by Eric Carlson.

Added extra safety checks.

Source/WebCore:

Test: media/track/track-cue-rendering-empty-cue-crash.html

* html/track/TextTrackCue.cpp:
(WebCore::TextTrackCue::getCueAsHTML):
(WebCore::TextTrackCue::updateDisplayTree):

LayoutTests:

* media/track/track-cue-rendering-empty-cue-crash-expected.txt: Added.
* media/track/track-cue-rendering-empty-cue-crash.html: Added.


Canonical link: https://commits.webkit.org/112956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126776 268f45cc-cd09-0410-ab3c-d52691b4dbfc